--- a/szamlazz-frontend/src/app/modules/user/components/user-table/user-table.component.html
+++ b/szamlazz-frontend/src/app/modules/user/components/user-table/user-table.component.html
@@ -1,25 +1,19 @@
 <table>
   <thead>
     <tr>
-      <th>ID</th>
-      <th>Firstname</th>
-      <th>Lastname</th>
-      <th>Address</th>
-      <th>Telephone</th>
-      <th>Job</th>
-      <th>Active</th>
+      <th>Név</th>
+      <th>Foglalkozás</th>
+      <th>Aktív</th>
+      <th>Műveletek</th>
     </tr>
   </thead>
   <tbody>
       @for(user of users; track user){
           <tr>
-          <td>{{ user.id }}</td>
-          <td>{{ user.firstname }}</td>
-          <td>{{ user.lastname }}</td>
-          <td>{{ user.address }}</td>
-          <td>{{ user.telephone }}</td>
+          <td>{{ user.lastname }} {{ user.firstname }}</td>
           <td>{{ user.job }}</td>
           <td>{{ user.active }}</td>
+          <td> <app-custom-button title="Törlés" (clicked)="deleteEmitter.emit(user)"></app-custom-button> <app-custom-button title="Módosítás" (clicked)="updateEmitter.emit(user.id)"></app-custom-button> </td>
         </tr>
     }
   </tbody>
