--- a/szamlazz-frontend/src/app/modules/user/views/user-create-update-view/user-create-update-view.component.html
+++ b/szamlazz-frontend/src/app/modules/user/views/user-create-update-view/user-create-update-view.component.html
@@ -1,1 +1,3 @@
-<p>user-create-update-view works!</p>
+<app-user-create [userForm]="userForm"></app-user-create>
+<app-custom-button title="Mégsem" (clicked)="cancel()"></app-custom-button>
+<app-custom-button title="Létrehozás" (clicked)="createUser()"></app-custom-button>
