--- a/szamlazz-frontend/src/app/modules/user/views/user-create-update-view/user-create-update-view.component.html
+++ b/szamlazz-frontend/src/app/modules/user/views/user-create-update-view/user-create-update-view.component.html
@@ -1,3 +1,9 @@
 <app-user-create [userForm]="userForm"></app-user-create>
 <app-custom-button title="Mégsem" (clicked)="cancel()"></app-custom-button>
-<app-custom-button title="Létrehozás" (clicked)="createUser()"></app-custom-button>
+@if(isUpdate){
+    <app-custom-button title="Törlés" (clicked)="deleteUser()"></app-custom-button>
+    <app-custom-button title="Módosítás" (clicked)="updateUser()"></app-custom-button>
+}
+@else {
+    <app-custom-button title="Létrehozás" (clicked)="createUser()"></app-custom-button>
+}
