--- a/szamlazz-frontend/src/app/shared/custom-button/custom-button.component.html
+++ b/szamlazz-frontend/src/app/shared/custom-button/custom-button.component.html
@@ -1,1 +1,1 @@
-<button (click)="onClick()">{{ title }}</button>
+<button [ngClass]="type" [disabled]="disabled" (click)="onClick()">{{ title }}</button>
