--- a/szamlazz-frontend/src/app/modules/user/views/user-create-update-view/user-create-update-view.component.html
+++ b/szamlazz-frontend/src/app/modules/user/views/user-create-update-view/user-create-update-view.component.html
@@ -1,9 +1,20 @@
-<app-user-create [userForm]="userForm"></app-user-create>
-<app-custom-button title="Mégsem" (clicked)="cancel()"></app-custom-button>
-@if(isUpdate){
-    <app-custom-button title="Törlés" (clicked)="deleteUser()"></app-custom-button>
-    <app-custom-button title="Módosítás" (clicked)="updateUser()"></app-custom-button>
-}
-@else {
-    <app-custom-button title="Létrehozás" (clicked)="createUser()"></app-custom-button>
-}
+<div class="page-title">
+    <h2>Új felhasználó</h2>
+</div>
+<div class="container">
+    <div class="component-container">
+        <app-user-create [userForm]="userForm"></app-user-create>
+        <div class="button-row justify-end">
+            <app-custom-button title="Mégsem" [type]="buttonType.SECONDARY" (clicked)="cancel()"></app-custom-button>
+            @if(isUpdate){
+                <app-custom-button title="Törlés" [type]="buttonType.DELETE" (clicked)="deleteUser()"></app-custom-button>
+                <app-custom-button title="Módosítás" [type]="buttonType.PRIMARY" [disabled]="userForm.pristine"
+                (clicked)="updateUser()"></app-custom-button>
+            }
+            @else {
+                <app-custom-button title="Létrehozás" [disabled]="userForm.invalid"
+                (clicked)="createUser()"></app-custom-button>
+            }
+        </div>
+    </div>
+</div>
