--- a/szamlazz-frontend/src/app/modules/user/views/user-search-view/user-search-view.component.html
+++ b/szamlazz-frontend/src/app/modules/user/views/user-search-view/user-search-view.component.html
@@ -1,6 +1,16 @@
-<app-custom-button title="Létrehozás" (clicked)="onCreateUser()">
-</app-custom-button>
-<app-user-table [users]="(users$ | async) || []" (deleteEmitter)="onDelete($event)" (updateEmitter)="onUpdate($event)"></app-user-table>
-<app-paginator [pageNumber]="pageable.pageNumber" [pageSize]="pageable.pageSize" [totalElements]="totalElements"
-    (pageChange)="onPageChange($event)">
-</app-paginator>
+<div class="page-title">
+    <h2>Felhasználók</h2>
+</div>
+<div class="container">
+    <div class="component-container">
+        <div class="button-row">
+            <app-custom-button title="Létrehozás" (clicked)="onCreateUser()">
+            </app-custom-button>
+        </div>
+        <app-user-table [users]="(users$ | async) || []" (deleteEmitter)="onDelete($event)"
+            (updateEmitter)="onUpdate($event)"></app-user-table>
+            <app-paginator [pageNumber]="pageable.pageNumber" [pageSize]="pageable.pageSize" [totalElements]="totalElements"
+            (pageChange)="onPageChange($event)">
+        </app-paginator>
+    </div>
+</div>
